tests/machine/x/hs/cast_struct.error

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:108:10: error:
    Not in scope: type constructor or class ‘Aeson.ToJSON’
    NB: no module named ‘Aeson’ is imported.
    |
108 | instance Aeson.ToJSON AnyValue where
    |          ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:109:21: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
109 |   toJSON (VInt n) = Aeson.toJSON n
    |                     ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:110:24: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
110 |   toJSON (VDouble d) = Aeson.toJSON d
    |                        ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:111:24: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
111 |   toJSON (VString s) = Aeson.toJSON s
    |                        ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:112:22: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
112 |   toJSON (VBool b) = Aeson.toJSON b
    |                      ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:132:8: error:
    Not in scope: ‘Aeson.decode’
    NB: no module named ‘Aeson’ is imported.
    |
132 |   case Aeson.decode (BSL.pack text) of
    |        ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:132:22: error:
    Not in scope: ‘BSL.pack’
    NB: no module named ‘BSL’ is imported.
    |
132 |   case Aeson.decode (BSL.pack text) of
    |                      ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:133:11: error:
    Not in scope: data constructor ‘Aeson.Array’
    NB: no module named ‘Aeson’ is imported.
    |
133 |     Just (Aeson.Array arr) -> map _valueToMap (V.toList arr)
    |           ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:133:48: error:
    Not in scope: ‘V.toList’
    NB: no module named ‘V’ is imported.
    |
133 |     Just (Aeson.Array arr) -> map _valueToMap (V.toList arr)
    |                                                ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:137:16: error:
    Not in scope: type constructor or class ‘Aeson.Value’
    NB: no module named ‘Aeson’ is imported.
    |
137 | _valueToMap :: Aeson.Value -> Map.Map String String
    |                ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:138:14: error:
    Not in scope: data constructor ‘Aeson.Object’
    NB: no module named ‘Aeson’ is imported.
    |
138 | _valueToMap (Aeson.Object o) =
    |              ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:139:18: error:
    Not in scope: ‘T.unpack’
    NB: no module named ‘T’ is imported.
    |
139 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                  ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:139:28: error:
    Not in scope: ‘Key.toText’
    NB: no module named ‘Key’ is imported.
    |
139 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                            ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:139:73: error:
    Not in scope: ‘KeyMap.toList’
    NB: no module named ‘KeyMap’ is imported.
    Suggested fix: Perhaps use ‘Map.toList’ (imported from Data.Map)
    |
139 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                                                                         ^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:142:19: error:
    Not in scope: type constructor or class ‘Aeson.Value’
    NB: no module named ‘Aeson’ is imported.
    |
142 | _valueToString :: Aeson.Value -> String
    |                   ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:143:17: error:
    Not in scope: data constructor ‘Aeson.String’
    NB: no module named ‘Aeson’ is imported.
    |
143 | _valueToString (Aeson.String s) = T.unpack s
    |                 ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:143:35: error:
    Not in scope: ‘T.unpack’
    NB: no module named ‘T’ is imported.
    |
143 | _valueToString (Aeson.String s) = T.unpack s
    |                                   ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:144:17: error:
    Not in scope: data constructor ‘Aeson.Number’
    NB: no module named ‘Aeson’ is imported.
    |
144 | _valueToString (Aeson.Number n) = show n
    |                 ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:145:17: error:
    Not in scope: data constructor ‘Aeson.Bool’
    NB: no module named ‘Aeson’ is imported.
    |
145 | _valueToString (Aeson.Bool b) = if b then "true" else "false"
    |                 ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:148:41: error:
    Not in scope: type constructor or class ‘Aeson.Value’
    NB: no module named ‘Aeson’ is imported.
    |
148 | _mapToValue :: Map.Map String String -> Aeson.Value
    |                                         ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:150:3: error:
    Not in scope: data constructor ‘Aeson.Object’
    NB: no module named ‘Aeson’ is imported.
    |
150 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |   ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:150:18: error:
    Not in scope: ‘KeyMap.fromList’
    NB: no module named ‘KeyMap’ is imported.
    Suggested fix: Perhaps use ‘Map.fromList’ (imported from Data.Map)
    |
150 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                  ^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:150:36: error:
    Not in scope: ‘Key.fromString’
    NB: no module named ‘Key’ is imported.
    |
150 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                    ^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:150:54: error:
    Not in scope: data constructor ‘Aeson.String’
    NB: no module named ‘Aeson’ is imported.
    |
150 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                                      ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:150:68: error:
    Not in scope: ‘T.pack’
    NB: no module named ‘T’ is imported.
    |
150 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                                                    ^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:166:61: error:
    Not in scope: data constructor ‘Aeson.Array’
    NB: no module named ‘Aeson’ is imported.
    |
166 |               val = if length objs == 1 then head objs else Aeson.Array (V.fromList objs)
    |                                                             ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:166:74: error:
    Not in scope: ‘V.fromList’
    NB: no module named ‘V’ is imported.
    Suggested fix: Perhaps use ‘Map.fromList’ (imported from Data.Map)
    |
166 |               val = if length objs == 1 then head objs else Aeson.Array (V.fromList objs)
    |                                                                          ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:167:34: error:
    Not in scope: ‘BSL.unpack’
    NB: no module named ‘BSL’ is imported.
    |
167 |            in _writeOutput path (BSL.unpack (Aeson.encode val))
    |                                  ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/cast_struct.hs:167:46: error:
    Not in scope: ‘Aeson.encode’
    NB: no module named ‘Aeson’ is imported.
    |
167 |            in _writeOutput path (BSL.unpack (Aeson.encode val))
    |                                              ^^^^^^^^^^^^


Context around line 108:
  106| data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)
  107| 
  108| instance Aeson.ToJSON AnyValue where
  109|   toJSON (VInt n) = Aeson.toJSON n
  110|   toJSON (VDouble d) = Aeson.toJSON d
